--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "chart.js": "^4.3.0",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
